--- a/templates/transactions/out.html
+++ b/templates/transactions/out.html
@@ -325,7 +325,7 @@
         <!-- RECEIPT # -->
         <div class="col-md-4">
             <label class="form-label accent">
-                Paper Receipt # <span class="req">*</span>
+                OR No # <span class="req">*</span>
             </label>
             <input type="text" class="form-control border-warn" id="sales-number" placeholder="e.g. 4052">
         </div>
